<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <!-- <item
         android:id="@+id/menu_news_search"
         android:title="@string/feed_search"
         android:icon="@drawable/ic_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always"
         />-->

    <item
        android:id="@+id/menu_news_search"
        android:title="@string/feed_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/menu_home"
        app:showAsAction="always"
        />


    <!-- <item
          android:id="@+id/menu_all_read"
          android:icon="@drawable/ic_check"
          android:title="@string/menu_all_read"
          app:showAsAction="never"
          />-->



    <item
        android:id="@+id/menu_share_starred"
        android:icon="@drawable/ic_share"
        android:title="@string/context_menu_share_starred"
        app:showAsAction="never"/>
</menu>